<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/btn_card_news"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/vFoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/gambar_berita" />

        <TextView
            android:id="@+id/vJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/vFoto"
            android:hint="@string/judul"
            android:textColorHint="#757575"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/vJurnalis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vJudul"
            android:layout_toStartOf="@id/batas"
            android:hint="@string/jurnalis"
            android:textColorHint="#757575"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/batas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vJudul"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/vTgl"
            android:textSize="11sp"
            android:text="-" />

        <TextView
            android:id="@+id/vTgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vJudul"
            android:layout_alignParentEnd="true"
            android:hint="@string/tanggal_berita"
            android:textColorHint="#757575"
            android:textSize="11sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>